# ebimayo

./: '  .gitignore  Cargo.toml  review.md
.github/workflows/: test.yml
crates/ebimayo-core/: Cargo.toml
docs/: coding-standards.md
src/: agent.rs  config.rs  lib.rs  main.rs  memory.rs
src/channels/: channel.rs  cli.rs  mod.rs
src/skills/: loader.rs  mod.rs  model.rs  util.rs
src/system_context/: mod.rs  system.txt
src/tool/: bash.txt  glob.rs  grep.txt  mod.rs
tests/inputs/agent_skills/my-skill-a/: SKILL.md
tests/inputs/agent_skills/my-skill-b/: SKILL.md
