[package]
name = "ebimayo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
rig = "0.38.1"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
glob = "0.3"
regex = "1"
async-trait = "0.1.89"
thiserror = "2.0.18"
walkdir = "2.5.0"
yaml_serde = "0.10.4"
